assets/css/style.css
body {
    margin:0;
    padding:0;
    font-family: 'Times New Roman', Times, serif;
    text-align:center;
    background-color:darkslategray;
    color:white;  
    }
    nav ul {
    list-style:none;
    padding:0;
    margin:0;
    width:100%;
    position:relative;
    }
    nav li{
    margin-top:10px;
    font-size:24px;
    display:inline-block;
    margin-left:6%;
    padding:5px;
    border-radius:25px;
    border: 1px solid white;
    background-color:black;    
    }
    nav a {
    text-decoration:none;
    color:gold;
    }
    p{
    margin-left:5%;
    margin-right:5%;
    }
    .coffediv{
    max-height:315px;
    max-width:560px;
    min-width:300px;
    min-height:180px;
    padding-top:70%;
    margin-left: 5%;
    margin-right:5%;
    overflow:hidden;
    display:contents;
    }
    .coffe{
    max-height:315px;
    max-width:560px;
    min-width:300px;
    min-height:240px;
    width:100%;
    height:100%;
    padding-inline:2%;
    }
    h2{
    margin-left:5%;
    margin-right:5%;
    }
    .chartdiv{
    max-height:315px;
    max-width:560px;
    min-width:300px;
    min-height:180px;
    padding-top:70%;
    margin-left: 5%;
    margin-right:5%;
    overflow:hidden;
    display:contents;
    }
    .chart{
    max-height:315px;
    max-width:560px;
    min-width:300px;
    min-height:240px;
    width:100%;
    height:100%;
    padding-inline:2%;
    }
    .ledgerdiv{
    max-height:315px;
    max-width:560px;
    min-width:300px;
    min-height:180px;
    padding-top:70%;
    margin-left: 5%;
    margin-right:5%;
    overflow:hidden;
    display:contents;
    }
    .ledgerpic{
    max-height:315px;
    max-width:560px;
    min-width:300px;
    min-height:240px;
    width:100%;
    height:100%;
    padding-inline:2%;
    }
    .dltdiv{
    max-height:315px;
    max-width:560px;
    min-width:300px;
    min-height:180px;
    padding-top:70%;
    margin-left: 5%;
    margin-right:5%;
    overflow:hidden;
    display:contents;
    }
    .dlt {
    max-height:315px;
    max-width:560px;
    min-width:300px;
    min-height:240px;
    width:100%;
    height:100%;
    padding-inline:2%;
    }
    .btcdiv{
    max-height:315px;
    max-width:560px;
    min-width:300px;
    min-height:180px;
    padding-top:70%;
    margin-left: 5%;
    margin-right:5%;
    overflow:hidden;
    display:contents;
    }
    .btcpartisipants {
    max-height:315px;
    max-width:560px;
    min-width:300px;
    min-height:240px;
    width:100%;
    height:100%;
    padding-inline:2%;
    }
    .container{
    max-height:315px;
    max-width:560px;
    min-width:300px;
    min-height:180px;
    padding-top:56.25%;
    margin-left: 5%;
    margin-right:5%;
    overflow:hidden;
    display:contents;
    }
    .container iframe{
    max-height:315px;
    max-width:560px;
    min-width:300px;
    min-height:240px;
    width:100%;
    height:100%;
    }
    .disclaimer{
    color:red;
    font-size:120%;
    padding:0;
    margin:0;
    border:0;
    }
    a:link {
    color:white;
    }
    a :visited{
    color:white;
    }
    a:hover {  
    background-color:white;
    color:black;
    border-radius:25px;
    }
    p a{
    color:black;
    font-size:120%;
    }
    footer{
    position:relative;
    bottom:0;
    background-color:black;
    margin:0;
    padding:0;
    border:0;
    height:100%;
    width:100%;
    }
    footer a {
    color:gold;
    background-color:black;
    border-radius:25px;
    padding-inline: 10px;
    }
    #big{
    color:black;
    background-color:gold;
    border-radius:25px;
    }
    @media(max-width: 700px;){
    
    body{    
    padding-left: 1%;
    padding-right:1%;
    }
    h1{
    font-size: 16px;
    }
    h2{
    font-size:14px;
    }
    h3 {
    font-size:12px;
    }
    footer{
    font-size:70%;
    padding:0;
    margin:0;
    border:0;
    } 
    nav li {
    font-size:16px;
    }
    }

